--- a/index.html
+++ b/index.html
@@ -3,43 +3,45 @@
   <head>
     <meta charset="utf-8">
     <title>Garth's Portfolio Webpage</title>
-
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <div>
+    <header>
       <h1>Welcome to Garth's Portfolio</h1>
-    </div>
-    <div>
-      <h2>Skills</h2>
-        <ul>
-          <li>JavaScript</li>
-          <li>Python</li>
-          <li>Java</li>
-          <li>C++</li>
-          <li>HTML/CSS</li>
-          <li>React/Redux</li>
-          <li>Node.js</li>
-          <li>Express.js</li>
-          <li>MongoDB</li>
-          <li>GraphQL</li>
-        </ul>
-    </div>
-    <div>
-      <h2>Projects</h2>
-      <ul>
-        <li>Minesweeper!</li>
-      </ul>
-    </div>
-    <div>
-      <h2>Contact</h2>
-      <form>
-        <input type="text" name="name" placeholder="Name" >
-        <input type="text" name="email" placeholder="Email" >
-        <br>
-        <textarea name="message" placeholder="Message" rows=10 cols=40></textarea>
-        <br>
-        <button>Send Message</button>
-      </form>
-    </div>
+    </header>
+    <main>
+      <div id="skills">
+        <h2>Skills</h2>
+        <p>
+          JavaScript <br>
+          Python <br>
+          Java <br>
+          C++ <br>
+          HTML/CSS <br>
+          React
+        </p>
+      </div>
+      <div id="projects">
+        <h2>Projects</h2>
+        <div>
+          <h4>Minesweeper</h4>
+          <p>Clone of the Classic game Minesweeper</p>
+        </div>
+      </div>
+    </main>
+    
+    <footer>
+      <div id="contact">
+      <h2>Contact</h2>  
+        <form>
+          <input type="text" name="name" placeholder="Name" >
+          <input type="text" name="email" placeholder="Email" >
+          <br>
+          <textarea name="message" placeholder="Message" rows=10 cols=40></textarea>
+          <br>
+          <button>Send Message</button>
+        </form>
+      </div>
+    </footer>
   </body>
 </html>
