--- a/index.html
+++ b/index.html
@@ -42,10 +42,19 @@
     </nav>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    
+    <!-- Home -->
+    <section class="bg-dark text-light p-5 ">
+      <div class="d-flex vh-100 text-center">
+        <h1 class="mx-auto">
+          Hi, I'm 
+          <span class="text-warning">Garth Calkwood</span>.
+          <br>
+          Welcome to my portfolio
+        </h1>
+      </div>
+    </section>
 
-    <header>
-      <h1>Welcome to Garth's Portfolio</h1>
-    </header>
     <main>
       <div id="skills">
         <h2>Skills</h2>
