--- a/index.html
+++ b/index.html
@@ -56,16 +56,38 @@
     </section>
 
     <main>
-      <div id="skills">
-        <h2>Skills</h2>
-        <p>
-          JavaScript <br>
-          Python <br>
-          Java <br>
-          C++ <br>
-          HTML/CSS <br>
-          React
-        </p>
+      <div>
+        <div class="container mt-5">
+          <div class="row">
+            <div class="col">
+              <img src="images/python.svg" class="img-fluid">
+            </div>
+            <div class="col">
+              <img src="images/java.svg" class="img-fluid">
+            </div>
+            <div class="col">
+              <img src="images/cplusplus.svg" class="img-fluid">
+            </div>
+            <div class="col">
+              <img src="images/javascript.svg" class="img-fluid">
+            </div>
+            <div class="col">
+              <img src="images/html5.svg" class="img-fluid">
+            </div>
+            <div class="col">
+              <img src="images/css.svg" class="img-fluid">
+            </div>
+            <div class="col">
+              <img src="images/react.svg" class="img-fluid">
+            </div>
+            <div class="col">
+              <img src="images/nodejs.svg" class="img-fluid">
+            </div>
+            <div class="col">
+              <img src="images/mongodb.svg" class="img-fluid">
+            </div>
+          </div>
+        </div>
       </div>
       <div id="projects">
         <h2>Projects</h2>
