--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     
     <footer>
       <form>
-        <div class="border shadow rounded w-50 p-4 mx-auto my-5 bg-body text-center">
+        <div class="border shadow rounded col-10 col-md-8 col-xl-6 p-4 mx-auto my-5 bg-body text-center">
           <h2 class="mb-3">Questions or Comments?</h2>
           <p class="mb-4"> Feel free to leave me a message and I'll get back to you as soon as possible!</p>
           <div>
