Fix tooltip placement at smaller screen sizes

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div>
         <div class="container mt-5">
           <div class="row">
-            <div class="col" data-bs-toggle="tooltip" data-bs-placement="top" title="Python">
+            <div class="col ms-4" data-bs-toggle="tooltip" data-bs-placement="top" title="Python">
               <img src="images/python.svg" class="img-fluid">
             </div>
             <div class="col" data-bs-toggle="tooltip" data-bs-placement="top" title="Java">
@@ -83,7 +83,7 @@
             <div class="col" data-bs-toggle="tooltip" data-bs-placement="top" title="Node.js">
               <img src="images/nodejs.svg" class="img-fluid">
             </div>
-            <div class="col" data-bs-toggle="tooltip" data-bs-placement="top" title="MongoDB">
+            <div class="col me-4" data-bs-toggle="tooltip" data-bs-placement="top" title="MongoDB">
               <img src="images/mongodb.svg" class="img-fluid">
             </div>
           </div>
