--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <nav class="navbar sticky-top navbar-expand-sm bg-dark navbar-dark">
       <div class="container">
         <a href="#" class="navbar-brand">Navbar</a>
         <button 
@@ -45,8 +45,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     
     <!-- Header -->
-    <section class="bg-dark text-light p-5 ">
-      <div class="d-flex vh-100 text-center">
+    <section id="head" class="bg-dark text-light p-5 ">
+      <div class="d-flex text-center">
         <h1 class="mx-auto">
           Hi, I'm 
           <span class="text-warning">Garth Calkwood</span>.
