--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a href="#contact" class="nav-link">Contact</a>
           </li>
           <li class="nav-item">
-            <button type="button" class="btn btn-primary">Resume</a>
+            <a href="https://drive.google.com/file/d/1XAqtBdhZg-zD2hp84RijSpGbaFIT5489/view?usp=sharing" target="_blank" type="button" class="btn btn-primary">Resume</a>
           </li>
         </ul> 
       </div>
