Fix navbar collapse bug
Fix bug where collapsing the contents of the navbar causes the entire
navbar to dissapear.

--- a/index.html
+++ b/index.html
@@ -11,42 +11,42 @@
     <title>Garth's Portfolio Webpage</title>
   </head>
 
-  <!-- Navbar -->
-  <nav id="navbar" class="navbar sticky-top navbar-expand-sm bg-dark navbar-dark">
-    <div class="container">
-      <a href="#" class="navbar-brand">
-        <i id="home" class="bi bi-house-door-fill"></i>
-      </a>
-      <button 
-        class="navbar-toggler" 
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbar"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbar">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a href="#skills" class="nav-link">Skills</a>
-          </li>
-          <li class="nav-item">
-            <a href="#projects" class="nav-link">Projects</a>
-          </li>
-          <li class="nav-item">
-            <a href="#contact" class="nav-link">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a href="https://drive.google.com/file/d/1XAqtBdhZg-zD2hp84RijSpGbaFIT5489/view?usp=sharing" target="_blank" type="button" class="btn btn-primary">Resume</a>
-          </li>
-        </ul> 
-      </div>
-    </div>
-  </nav>
-
   <body data-bs-spy="scroll" data-bs-target="#navbar" data-bs-offset="100" class="scrollspy-example" tabindex="0">
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <!-- Navbar -->
+    <nav class="navbar sticky-top navbar-expand-sm bg-dark navbar-dark">
+      <div class="container">
+        <a href="#" class="navbar-brand">
+          <i id="home" class="bi bi-house-door-fill"></i>
+        </a>
+        <button 
+          class="navbar-toggler" 
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbar"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbar">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a href="#skills" class="nav-link">Skills</a>
+            </li>
+            <li class="nav-item">
+              <a href="#projects" class="nav-link">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a href="#contact" class="nav-link">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a href="https://drive.google.com/file/d/1XAqtBdhZg-zD2hp84RijSpGbaFIT5489/view?usp=sharing" target="_blank" type="button" class="btn btn-primary">Resume</a>
+            </li>
+          </ul> 
+        </div>
+      </div>
+    </nav>
 
     <!-- Header -->
     <section id="header" class="bg-dark text-light p-5">
