--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body data-bs-spy="scroll" data-bs-target="#navbar" data-bs-offset="100" class="scrollspy-example" tabindex="0">
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
+    
     <!-- Navbar -->
     <nav class="navbar sticky-top navbar-expand-sm bg-dark navbar-dark">
       <div class="container">
@@ -62,7 +62,7 @@
 
     <main>
       <!-- Skills -->
-      <div id="skills" class="pt-5">
+      <div id="skills" class="navbar-padding">
         <h1 class="text-center">SKILLS</h1>
         <div class="container mt-5">
           <div class="row">
@@ -97,18 +97,171 @@
         </div>
       </div>
       <!-- Projects -->
-      <div id="projects" class="pt-5">
+      <div id="projects" class="my-5 navbar-padding">
         <h1 class="text-center">PROJECTS</h1>
-        <div class="p-5 text-center">
-          <h4>Minesweeper</h4>
-          <p>Clone of the Classic game Minesweeper</p>
+        <div class="container w-75 h-75 mt-5">
+          <!-- Metronome -->
+          <div class="row">
+            <div class="col-sm-12 col-md">
+              <div class="project shadow mx-1 my-3">
+                <img src="https://mdbootstrap.com/img/new/standard/city/053.jpg" class="project-img w-100" data-bs-toggle="modal" data-bs-target="#metronome"/>
+                <p class="project-title">Metronome</p>
+              </div>
+              <!-- Modal -->
+              <div class="modal fade" id="metronome" tabindex="-1" aria-labelledby="metronomeModal" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="metronomeModal">Metronome Web App</h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div id="metronomeCarouselIndicators" class="carousel slide" data-bs-ride="carousel">
+                      <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#metronomeCarouselIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#metronomeCarouselIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#metronomeCarouselIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                      </div>
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img src="images/javascript.svg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="images/css.svg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="images/html5.svg" class="d-block w-100" alt="...">
+                        </div>
+                      </div>
+                      <button class="carousel-control-prev" type="button" data-bs-target="#metronomeCarouselIndicators" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                      </button>
+                      <button class="carousel-control-next" type="button" data-bs-target="#metronomeCarouselIndicators" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      A simple metronome web app built with JavaScript, React, Node.js, Express.js, MongoDB and Material UI.
+                    </div>
+                    <div class="modal-footer">
+                      <a type="button" class="btn btn-primary disabled">Demo</a>
+                      <a href="https://github.com/GarthCalkwood/metronome" target="_blank" type="button" class="btn btn-primary">Code</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Minesweeper -->
+            <div class="col-sm-12 col-md">
+              <div class="project shadow mx-1 my-3">
+                <img src="https://mdbootstrap.com/img/new/standard/city/053.jpg" class="project-img w-100" data-bs-toggle="modal" data-bs-target="#minesweeper"/>
+                <p class="project-title">Minesweeper</p>
+              </div>
+              <!-- Modal -->
+              <div class="modal fade" id="minesweeper" tabindex="-1" aria-labelledby="minesweeperModal" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="minesweeperModal">Minesweeper Android App</h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div id="minesweeperCarouselIndicators" class="carousel slide" data-bs-ride="carousel">
+                      <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#minesweeperCarouselIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#minesweeperCarouselIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#minesweeperCarouselIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                      </div>
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img src="images/javascript.svg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="images/css.svg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="images/html5.svg" class="d-block w-100" alt="...">
+                        </div>
+                      </div>
+                      <button class="carousel-control-prev" type="button" data-bs-target="#minesweeperCarouselIndicators" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                      </button>
+                      <button class="carousel-control-next" type="button" data-bs-target="#minesweeperCarouselIndicators" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      An 8x8 Minesweeper game developed using Java and Android Studio.
+                    </div>
+                    <div class="modal-footer">
+                      <a type="button" class="btn btn-primary disabled">Demo</a>
+                      <a href="https://github.com/GarthCalkwood/minesweeper" target="_blank" type="button" class="btn btn-primary">Code</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Portfolio -->
+            <div class="col-sm-12 col-md">
+              <div class="project shadow mx-1 my-3">
+                <img src="https://mdbootstrap.com/img/new/standard/city/053.jpg" class="project-img w-100" data-bs-toggle="modal" data-bs-target="#portfolio"/>
+                <p class="project-title">Portfolio</p>
+              </div>
+              <!-- Modal -->
+              <div class="modal fade" id="portfolio" tabindex="-1" aria-labelledby="portfolioModal" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="portfolioModal">Portfolio Web Page</h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div id="portfolioCarouselIndicators" class="carousel slide" data-bs-ride="carousel">
+                      <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#portfolioCarouselIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#portfolioCarouselIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#portfolioCarouselIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                      </div>
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img src="images/javascript.svg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="images/css.svg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="images/html5.svg" class="d-block w-100" alt="...">
+                        </div>
+                      </div>
+                      <button class="carousel-control-prev" type="button" data-bs-target="#portfolioCarouselIndicators" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                      </button>
+                      <button class="carousel-control-next" type="button" data-bs-target="#portfolioCarouselIndicators" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      This website.
+                    </div>
+                    <div class="modal-footer">
+                      <a type="button" class="btn btn-primary disabled">Demo</a>
+                      <a href="https://github.com/GarthCalkwood/portfolio" target="_blank" type="button" class="btn btn-primary">Code</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </main>
     
     <footer>
       <!-- Contact Form -->
-      <form id="contact" class="pt-5">
+      <form id="contact" class="navbar-padding">
         <div class="border shadow rounded col-10 col-md-8 col-xl-6 p-4 mx-auto my-5 bg-body text-center">
           <h2 class="mb-3">Questions or Comments?</h2>
           <p class="mb-4"> Feel free to leave me a message and I'll get back to you as soon as possible!</p>
