--- a/index.html
+++ b/index.html
@@ -13,12 +13,30 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
+    <!-- EmailJS -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+      (function() {
+        emailjs.init("user_Hotf670VNkQcg8DZ4R8xV");
+      })();
+    </script>
+    <script type="text/javascript">
+      window.onload = () => {
+        document.getElementById("contact-form").addEventListener("submit", function(event) {
+          event.preventDefault();
+          emailjs.sendForm("contact_service", "contact_form", this)
+            .then(() => {
+              console.log("SUCCESS!");
+            }), (error) => {
+              console.log("ERROR: ", error);
+            }
+        });
+      }
+    </script>
+
     <!-- Navbar color change -->
     <script>
-      window.onscroll = function() {changeNavColor()};
-      
-      function changeNavColor() {
-        console.log(document.body);
+      window.onscroll = () => {
         if (document.body.scrollTop > window.innerHeight - 50 || document.documentElement.scrollTop > window.innerHeight - 50) {
           document.getElementById("nav").style.backgroundColor = "#3A7186";
         } else {
@@ -174,26 +192,22 @@
         <!-- Contact Section -->
         <div id="contact">
           <!-- Contact Form -->
-          <form class="navbar-padding">
-            <div id="contact-form" class="rounded col-10 col-md-8 col-xl-6 p-4 mx-auto text-center">
-              <h2 class="mb-3">Questions or Comments?</h2>
-              <p class="mb-5"> Feel free to leave me a message and I'll get back to you as soon as possible!</p>
-              <div>
-                <div class="form-floating mb-3">
-                  <input type="text" class="form-control" id="name-input" placeholder="Name" >
-                  <label for="nameInput">Name</label>
-                </div>
-                <div class="form-floating mb-3">
-                  <input type="text" class="form-control" id="email-input" placeholder="Email" >
-                  <label for="emailInput">Email</label>
-                </div>
-              </div>
-              <div class="form-floating mb-3">
-                <textarea id="message-input" class="form-control" placeholder="Message" style="height: 200px"></textarea>
-                <label for="messageTextArea">Message</label>
-              </div>
-              <button type="button" class="btn btn-primary my-3">Send Message</button>
+          <form id="contact-form" class="rounded col-10 col-md-8 col-xl-6 px-4 pb-4 navbar-padding mx-auto text-center">
+            <h2 class="mb-3">Questions or Comments?</h2>
+            <p class="mb-5"> Feel free to leave me a message and I'll get back to you as soon as possible!</p>
+            <div class="form-floating mb-3">
+              <input type="text" name="user_name" class="form-control" id="name-input" placeholder="Name" >
+              <label for="nameInput">Name</label>
             </div>
+            <div class="form-floating mb-3">
+              <input type="email" name="user_email" class="form-control" id="email-input" placeholder="Email" >
+              <label for="emailInput">Email</label>
+            </div>
+            <div class="form-floating mb-3">
+              <textarea id="message-input" name="message" class="form-control" placeholder="Message" style="height: 200px"></textarea>
+              <label for="messageTextArea">Message</label>
+            </div>
+            <button type="submit" class="btn btn-primary my-3">Send Message</button>
           </form>
           <!-- Social Icons -->
           <div class="d-flex justify-content-center pb-5">
