Fix tech icon sizing
The tech icons became very small on smaller screen sizes. This commit
changes the tech icons to display in rows of 3 on narrow screens to
allow for more voluminous tech icons.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             class="navbar-toggler" 
             type="button"
             data-bs-toggle="collapse"
-            data-bs-target="#navbar"
+            data-bs-target="#navbar-items"
           >
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -109,33 +109,33 @@
         <div id="skills" class="navbar-padding">
           <h1 class="text-center mb-5">SKILLS</h1>
           <div class="container">
-            <div class="row">
-              <div class="col ms-4" data-bs-toggle="tooltip" data-bs-placement="top" title="Python">
-                <img src="images/python.svg" class="img-fluid">
+            <div class="row mx-5 mx-sm-3">
+              <div class="col-4 col-sm p-3 pt-1 p-sm-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Python">
+                <img src="images/python.svg" class="img-fluid tech-icon">
               </div>
-              <div class="col" data-bs-toggle="tooltip" data-bs-placement="top" title="Java">
-                <img src="images/java.svg" class="img-fluid">
+              <div class="col-4 col-sm p-3 pt-1 p-sm-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Java">
+                <img src="images/java.svg" class="img-fluid tech-icon">
               </div>
-              <div class="col" data-bs-toggle="tooltip" data-bs-placement="top" title="C++">
-                <img src="images/cplusplus.svg" class="img-fluid">
+              <div class="col-4 col-sm p-3 pt-1 p-sm-2" data-bs-toggle="tooltip" data-bs-placement="top" title="C++">
+                <img src="images/cplusplus.svg" class="img-fluid tech-icon">
               </div>
-              <div class="col" data-bs-toggle="tooltip" data-bs-placement="top" title="JavaScript">
-                <img src="images/javascript.svg" class="img-fluid">
+              <div class="col-4 col-sm p-3 pt-1 p-sm-2" data-bs-toggle="tooltip" data-bs-placement="top" title="JavaScript">
+                <img src="images/javascript.svg" class="img-fluid tech-icon">
               </div>
-              <div class="col" data-bs-toggle="tooltip" data-bs-placement="top" title="HTML">
-                <img src="images/html5.svg" class="img-fluid">
+              <div class="col-4 col-sm p-3 pt-1 p-sm-2" data-bs-toggle="tooltip" data-bs-placement="top" title="HTML">
+                <img src="images/html5.svg" class="img-fluid tech-icon">
               </div>
-              <div class="col" data-bs-toggle="tooltip" data-bs-placement="top" title="CSS">
-                <img src="images/css.svg" class="img-fluid">
+              <div class="col-4 col-sm p-3 pt-1 p-sm-2" data-bs-toggle="tooltip" data-bs-placement="top" title="CSS">
+                <img src="images/css.svg" class="img-fluid tech-icon">
               </div>
-              <div class="col" data-bs-toggle="tooltip" data-bs-placement="top" title="React.js">
-                <img src="images/react.svg" class="img-fluid">
+              <div class="col-4 col-sm p-3 pt-1 p-sm-2" data-bs-toggle="tooltip" data-bs-placement="top" title="React.js">
+                <img src="images/react.svg" class="img-fluid tech-icon">
               </div>
-              <div class="col" data-bs-toggle="tooltip" data-bs-placement="top" title="Node.js">
-                <img src="images/nodejs.svg" class="img-fluid">
+              <div class="col-4 col-sm p-3 pt-1 p-sm-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Node.js">
+                <img src="images/nodejs.svg" class="img-fluid tech-icon">
               </div>
-              <div class="col me-4" data-bs-toggle="tooltip" data-bs-placement="top" title="MongoDB">
-                <img src="images/mongodb.svg" class="img-fluid">
+              <div class="col-4 col-sm p-3 pt-1 p-sm-2" data-bs-toggle="tooltip" data-bs-placement="top" title="MongoDB">
+                <img src="images/mongodb.svg" class="img-fluid tech-icon">
               </div>
             </div>
           </div>
