--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <script>
       window.onscroll = () => {
         if (document.body.scrollTop > window.innerHeight - 50 || document.documentElement.scrollTop > window.innerHeight - 50) {
-          document.getElementById("nav").style.backgroundColor = "#3A7186";
+          document.getElementById("nav").style.backgroundColor = "#093044";
         } else {
           document.getElementById("nav").style.backgroundColor = "transparent"
         }
@@ -86,7 +86,7 @@
                 <a href="#contact" class="nav-link">Contact</a>
               </li>
               <li class="nav-item">
-                <a href="https://drive.google.com/file/d/1XAqtBdhZg-zD2hp84RijSpGbaFIT5489/view?usp=sharing" target="_blank" type="button" class="btn btn-primary">Resume</a>
+                <a href="https://drive.google.com/file/d/1XAqtBdhZg-zD2hp84RijSpGbaFIT5489/view?usp=sharing" target="_blank" type="button" class="btn btn-secondary bg-secondary">Resume</a>
               </li>
             </ul> 
           </div>
@@ -155,8 +155,8 @@
                   <h5 class="card-title">Metronome</h5>
                   <p class="card-text">A simple metronome web app.</p>
                   <p class="card-text"><small class="text-muted">JavaScript | React.js | Node.js | Express.js | MongoDB | MaterialUI</small></p>
-                  <a type="button" class="btn btn-primary bg-primary disabled">Demo</a>
-                  <a href="https://github.com/GarthCalkwood/metronome" target="_blank" rel="noopener noreferrer" type="button" class="btn btn-primary bg-primary" role="button" >Code</a>
+                  <a type="button" class="btn btn-dark disabled">Demo</a>
+                  <a href="https://github.com/GarthCalkwood/metronome" target="_blank" rel="noopener noreferrer" type="button" class="btn btn-secondary bg-secondary" role="button" >Code</a>
                 </div>
               </div>
             </div>
@@ -172,8 +172,8 @@
                   <h5 class="card-title">Portfolio</h5>
                   <p class="card-text">This website.</p>
                   <p class="card-text"><small class="text-muted">JavaScript | HTML | CSS | Bootstrap</small></p>
-                  <a type="button" class="btn btn-primary bg-primary disabled">Demo</a>
-                  <a href="https://github.com/GarthCalkwood/portfolio" target="_blank" rel="noopener noreferrer" type="button" class="btn btn-primary bg-primary">Code</a>
+                  <a type="button" class="btn btn-dark disabled">Demo</a>
+                  <a href="https://github.com/GarthCalkwood/portfolio" target="_blank" rel="noopener noreferrer" type="button" class="btn btn-secondary bg-secondary">Code</a>
                 </div>
               </div>
             </div>
@@ -189,8 +189,8 @@
                   <h5 class="card-title">Minesweeper</h5>
                   <p class="card-text">An 8x8 Minesweeper Android app.</p>
                   <p class="card-text"><small class="text-muted">Java | Android Studio</small></p>
-                  <a type="button" class="btn btn-primary disabled">Demo</a>
-                  <a href="https://github.com/GarthCalkwood/minesweeper" target="_blank" rel="noopener noreferrer" type="button" class="btn btn-primary bg-primary">Code</a>
+                  <a type="button" class="btn btn-dark disabled">Demo</a>
+                  <a href="https://github.com/GarthCalkwood/minesweeper" target="_blank" rel="noopener noreferrer" type="button" class="btn btn-secondary bg-secondary">Code</a>
                 </div>
               </div>
             </div>
@@ -198,24 +198,24 @@
         </div>
         
         <!-- Contact Section -->
-        <div id="contact">
+        <div id="contact" class="bg-primary">
           <!-- Contact Form -->
-          <form id="contact-form" class="rounded col-10 col-md-8 col-xl-6 px-4 pb-4 navbar-padding mx-auto text-center">
+          <form id="contact-form" class="rounded col-10 col-md-8 col-xl-6 px-4 pb-4 navbar-padding mx-auto text-center bg-primary">
             <h2 class="mb-3">Questions or Comments?</h2>
             <p class="mb-5"> Feel free to leave me a message and I'll get back to you as soon as possible!</p>
             <div class="form-floating mb-3">
-              <input type="text" name="user_name" class="form-control" id="name-input" placeholder="Name" required>
+              <input type="text" name="user_name" class="form-control bg-primary" id="name-input" placeholder="Name" required>
               <label for="nameInput">Name</label>
             </div>
             <div class="form-floating mb-3">
-              <input type="email" name="user_email" class="form-control" id="email-input" placeholder="Email" required>
+              <input type="email" name="user_email" class="form-control bg-primary" id="email-input" placeholder="Email" required>
               <label for="emailInput">Email</label>
             </div>
             <div class="form-floating mb-3">
-              <textarea id="message-input" name="message" class="form-control" placeholder="Message" required style="height: 200px"></textarea>
+              <textarea id="message-input" name="message" class="form-control bg-primary" placeholder="Message" required style="height: 200px"></textarea>
               <label for="messageTextArea">Message</label>
             </div>
-            <button type="submit" class="btn btn-primary my-3">Send Message</button>
+            <button type="submit" class="btn btn-secondary bg-secondary my-3">Send Message</button>
           </form>
           <!-- Social Icons -->
           <div class="d-flex justify-content-center pb-5">
