Remove project section placeholder images

--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
         <div id="projects" class="navbar-padding mb-5">
           <h1 class="text-center mb-5">PROJECTS</h1>
           <!-- Metronome -->
-          <div class="card w-75 mx-auto mb-3">
+          <div class="card w-50 mx-auto mb-3">
             <div class="row g-0">
-              <div class="col-md-6">
+              <!-- <div class="col-md-6">
                 <img src="https://mdbootstrap.com/img/new/standard/city/053.jpg" class="project-img img-fluid rounded-start">
-              </div>
+              </div> -->
               <div class="col-md-6">
                 <div class="card-body">
                   <h5 class="card-title">Metronome</h5>
@@ -161,29 +161,12 @@
               </div>
             </div>
           </div>
-          <!-- Portfolio -->
-          <div class="card w-75 mx-auto mb-3">
-            <div class="row g-0">
-              <div class="col-md-6">
-                <img src="https://mdbootstrap.com/img/new/standard/city/053.jpg" class="project-img img-fluid rounded-start">
-              </div>
-              <div class="col-md-6">
-                <div class="card-body">
-                  <h5 class="card-title">Portfolio</h5>
-                  <p class="card-text">This website.</p>
-                  <p class="card-text"><small class="text-muted">JavaScript | HTML | CSS | Bootstrap</small></p>
-                  <a type="button" class="btn btn-dark disabled">Demo</a>
-                  <a href="https://github.com/GarthCalkwood/portfolio" target="_blank" rel="noopener noreferrer" type="button" class="btn btn-secondary bg-secondary">Code</a>
-                </div>
-              </div>
-            </div>
-          </div>
           <!-- Minesweeper -->
-          <div class="card w-75 mx-auto mb-3">
+          <div class="card w-50 mx-auto mb-3">
             <div class="row g-0">
-              <div class="col-md-6">
+              <!-- <div class="col-md-6">
                 <img src="https://mdbootstrap.com/img/new/standard/city/053.jpg" class="project-img img-fluid rounded-start">
-              </div>
+              </div> -->
               <div class="col-md-6">
                 <div class="card-body">
                   <h5 class="card-title">Minesweeper</h5>
@@ -191,6 +174,23 @@
                   <p class="card-text"><small class="text-muted">Java | Android Studio</small></p>
                   <a type="button" class="btn btn-dark disabled">Demo</a>
                   <a href="https://github.com/GarthCalkwood/minesweeper" target="_blank" rel="noopener noreferrer" type="button" class="btn btn-secondary bg-secondary">Code</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Portfolio -->
+          <div class="card w-50 mx-auto mb-3">
+            <div class="row g-0">
+              <!-- <div class="col-md-6">
+                <img src="https://mdbootstrap.com/img/new/standard/city/053.jpg" class="project-img img-fluid rounded-start">
+              </div> -->
+              <div class="col-md-6">
+                <div class="card-body">
+                  <h5 class="card-title">Portfolio</h5>
+                  <p class="card-text">This website.</p>
+                  <p class="card-text"><small class="text-muted">JavaScript | HTML | CSS | Bootstrap</small></p>
+                  <a type="button" class="btn btn-dark disabled">Demo</a>
+                  <a href="https://github.com/GarthCalkwood/portfolio" target="_blank" rel="noopener noreferrer" type="button" class="btn btn-secondary bg-secondary">Code</a>
                 </div>
               </div>
             </div>
