Add project section improvements
Remove the demo buttons for the portfolio and minesweeper projects since
there will be no demos for those projects. Add a "coming soon" tooltip
to the demo button for the metronome project. Several minor appearance
related changes have been added to the project section as well.

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               <div class="col-4 col-sm p-3 pt-1 p-sm-2" data-bs-toggle="tooltip" data-bs-placement="top" title="CSS">
                 <img src="images/css.svg" class="img-fluid tech-icon">
               </div>
-              <div class="col-4 col-sm p-3 pt-1 p-sm-2" data-bs-toggle="tooltip" data-bs-placement="top" title="React.js">
+              <div class="col-4 col-sm p-3 pt-1 p-sm-2" data-bs-toggle="tooltip" data-bs-placement="top" title="React">
                 <img src="images/react.svg" class="img-fluid tech-icon">
               </div>
               <div class="col-4 col-sm p-3 pt-1 p-sm-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Node.js">
@@ -145,7 +145,7 @@
         <div id="projects" class="navbar-padding mb-5">
           <h1 class="text-center mb-5">PROJECTS</h1>
           <!-- Metronome -->
-          <div class="card w-50 mx-auto mb-3">
+          <div class="card w-50 mx-auto mb-4">
             <div class="row g-0">
               <!-- <div class="col-md-6">
                 <img src="https://mdbootstrap.com/img/new/standard/city/053.jpg" class="project-img img-fluid rounded-start">
@@ -153,16 +153,18 @@
               <div class="col-md-6">
                 <div class="card-body">
                   <h5 class="card-title">Metronome</h5>
-                  <p class="card-text">A simple metronome web app.</p>
-                  <p class="card-text"><small class="text-muted">JavaScript | React.js | Node.js | Express.js | MongoDB | MaterialUI</small></p>
-                  <a type="button" class="btn btn-dark disabled">Demo</a>
-                  <a href="https://github.com/GarthCalkwood/metronome" target="_blank" rel="noopener noreferrer" type="button" class="btn btn-secondary bg-secondary" role="button" >Code</a>
+                  <p class="card-text">A full stack metronome web app.</p>
+                  <p class="card-text"><small class="text-muted">JavaScript | React | Node.js | Express.js | MongoDB | MaterialUI</small></p>
+                  <a href="https://github.com/GarthCalkwood/metronome" target="_blank" rel="noopener noreferrer" type="button" class="btn btn-secondary bg-secondary" role="button">Code</a>
+                  <span data-bs-toggle="tooltip" title="Coming soon">
+                    <button type="button" class="btn btn-secondary disabled">Demo</button>
+                  </span>
                 </div>
               </div>
             </div>
           </div>
           <!-- Minesweeper -->
-          <div class="card w-50 mx-auto mb-3">
+          <div class="card w-50 mx-auto mb-4">
             <div class="row g-0">
               <!-- <div class="col-md-6">
                 <img src="https://mdbootstrap.com/img/new/standard/city/053.jpg" class="project-img img-fluid rounded-start">
@@ -172,14 +174,13 @@
                   <h5 class="card-title">Minesweeper</h5>
                   <p class="card-text">An 8x8 Minesweeper Android app.</p>
                   <p class="card-text"><small class="text-muted">Java | Android Studio</small></p>
-                  <a type="button" class="btn btn-dark disabled">Demo</a>
                   <a href="https://github.com/GarthCalkwood/minesweeper" target="_blank" rel="noopener noreferrer" type="button" class="btn btn-secondary bg-secondary">Code</a>
                 </div>
               </div>
             </div>
           </div>
           <!-- Portfolio -->
-          <div class="card w-50 mx-auto mb-3">
+          <div class="card w-50 mx-auto mb-4">
             <div class="row g-0">
               <!-- <div class="col-md-6">
                 <img src="https://mdbootstrap.com/img/new/standard/city/053.jpg" class="project-img img-fluid rounded-start">
@@ -189,7 +190,6 @@
                   <h5 class="card-title">Portfolio</h5>
                   <p class="card-text">This website.</p>
                   <p class="card-text"><small class="text-muted">JavaScript | HTML | CSS | Bootstrap</small></p>
-                  <a type="button" class="btn btn-dark disabled">Demo</a>
                   <a href="https://github.com/GarthCalkwood/portfolio" target="_blank" rel="noopener noreferrer" type="button" class="btn btn-secondary bg-secondary">Code</a>
                 </div>
               </div>
