Add mockup images

--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@
         <div id="projects" class="navbar-padding mb-5">
           <h1 class="text-center mb-5">PROJECTS</h1>
           <!-- Metronome -->
-          <div class="card w-50 mx-auto mb-4">
+          <div class="card w-75 mx-auto mb-5">
             <div class="row g-0">
-              <!-- <div class="col-md-6">
-                <img src="https://mdbootstrap.com/img/new/standard/city/053.jpg" class="project-img img-fluid rounded-start">
-              </div> -->
               <div class="col-md-6">
-                <div class="card-body">
+                <img src="images/metronome-mockup.png" class="project-img img-fluid rounded-start">
+              </div>
+              <div class="col-md-6">
+                <div class="card-body pt-xl-5">
                   <h5 class="card-title">Metronome</h5>
                   <p class="card-text">A full stack metronome web app.</p>
                   <p class="card-text"><small class="text-muted">JavaScript | React | Node.js | Express.js | MongoDB | MaterialUI</small></p>
@@ -164,13 +164,13 @@
             </div>
           </div>
           <!-- Minesweeper -->
-          <div class="card w-50 mx-auto mb-4">
+          <div class="card w-75 mx-auto mb-5">
             <div class="row g-0">
-              <!-- <div class="col-md-6">
-                <img src="https://mdbootstrap.com/img/new/standard/city/053.jpg" class="project-img img-fluid rounded-start">
-              </div> -->
               <div class="col-md-6">
-                <div class="card-body">
+                <img src="images/minesweeper-mockup.png" class="project-img img-fluid rounded-start">
+              </div>
+              <div class="col-md-6">
+                <div class="card-body pt-xl-5">
                   <h5 class="card-title">Minesweeper</h5>
                   <p class="card-text">An 8x8 Minesweeper Android app.</p>
                   <p class="card-text"><small class="text-muted">Java | Android Studio</small></p>
@@ -180,13 +180,13 @@
             </div>
           </div>
           <!-- Portfolio -->
-          <div class="card w-50 mx-auto mb-4">
+          <div class="card w-75 mx-auto mb-5">
             <div class="row g-0">
-              <!-- <div class="col-md-6">
-                <img src="https://mdbootstrap.com/img/new/standard/city/053.jpg" class="project-img img-fluid rounded-start">
-              </div> -->
               <div class="col-md-6">
-                <div class="card-body">
+                <img src="images/portfolio-mockup.png" class="project-img img-fluid rounded-start">
+              </div>
+              <div class="col-md-6">
+                <div class="card-body pt-xl-5">
                   <h5 class="card-title">Portfolio</h5>
                   <p class="card-text">This website.</p>
                   <p class="card-text"><small class="text-muted">JavaScript | HTML | CSS | Bootstrap</small></p>
