Fix button appearance on Safari

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <a href="#contact" class="nav-link">Contact</a>
               </li>
               <li class="nav-item">
-                <a href="https://drive.google.com/file/d/1XAqtBdhZg-zD2hp84RijSpGbaFIT5489/view?usp=sharing" target="_blank" type="button" class="btn btn-secondary bg-secondary">Resume</a>
+                <a href="https://drive.google.com/file/d/1XAqtBdhZg-zD2hp84RijSpGbaFIT5489/view?usp=sharing" target="_blank" class="btn btn-secondary bg-secondary">Resume</a>
               </li>
             </ul> 
           </div>
@@ -155,9 +155,9 @@
                   <h5 class="card-title">Metronome</h5>
                   <p class="card-text">A full stack metronome web app.</p>
                   <p class="card-text"><small class="text-muted">JavaScript | React | Node.js | Express.js | MongoDB | MaterialUI</small></p>
-                  <a href="https://github.com/GarthCalkwood/metronome" target="_blank" rel="noopener noreferrer" type="button" class="btn btn-secondary bg-secondary" role="button">Code</a>
+                  <a href="https://github.com/GarthCalkwood/metronome" target="_blank" rel="noopener noreferrer" class="btn btn-secondary bg-secondary" role="button">Code</a>
                   <span data-bs-toggle="tooltip" title="Coming soon">
-                    <button type="button" class="btn btn-secondary disabled">Demo</button>
+                    <button class="btn btn-secondary disabled">Demo</button>
                   </span>
                 </div>
               </div>
@@ -174,7 +174,7 @@
                   <h5 class="card-title">Minesweeper</h5>
                   <p class="card-text">An 8x8 Minesweeper Android app.</p>
                   <p class="card-text"><small class="text-muted">Java | Android Studio</small></p>
-                  <a href="https://github.com/GarthCalkwood/minesweeper" target="_blank" rel="noopener noreferrer" type="button" class="btn btn-secondary bg-secondary">Code</a>
+                  <a href="https://github.com/GarthCalkwood/minesweeper" target="_blank" rel="noopener noreferrer" class="btn btn-secondary bg-secondary">Code</a>
                 </div>
               </div>
             </div>
@@ -190,7 +190,7 @@
                   <h5 class="card-title">Portfolio</h5>
                   <p class="card-text">This website.</p>
                   <p class="card-text"><small class="text-muted">JavaScript | HTML | CSS | Bootstrap</small></p>
-                  <a href="https://github.com/GarthCalkwood/portfolio" target="_blank" rel="noopener noreferrer" type="button" class="btn btn-secondary bg-secondary">Code</a>
+                  <a href="https://github.com/GarthCalkwood/portfolio" target="_blank" rel="noopener noreferrer" class="btn btn-secondary bg-secondary">Code</a>
                 </div>
               </div>
             </div>
