Remove javascript from metronome skills

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <div class="card-body pt-xl-5">
                   <h5 class="card-title">Metronome</h5>
                   <p class="card-text">A full stack metronome web app.</p>
-                  <p class="card-text"><small class="text-muted">JavaScript | React | Node.js | Express.js | MongoDB | MaterialUI</small></p>
+                  <p class="card-text"><small class="text-muted">React | Node.js | Express.js | MongoDB | MaterialUI</small></p>
                   <a href="https://github.com/GarthCalkwood/metronome" target="_blank" rel="noopener noreferrer" class="btn btn-secondary bg-secondary" role="button">Code</a>
                   <span data-bs-toggle="tooltip" title="Coming soon">
                     <button class="btn btn-secondary disabled">Demo</button>
